# MiloBuddy

./: .gitignore  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_create.py
backend/app/: main.py
backend/app/agents/main_agent/: agent_adapter.py  build_context.py  main_agent.py  prompt.py
backend/app/agents/main_agent/tools/: read_tools.py  write_tools.py
backend/app/api/: __init__.py  auth.py  budgets.py  categories.py  chat.py  expenses.py  freedom_score.py  goals.py  recurring_expenses.py  transactions.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: deps.py  engine.py  models.py
backend/app/models/: chat.py  goal.py  schemas.py  transaction.py  user.py
backend/app/services/: budget_engine.py  db_services.py  finance_tools.py  llm_service.py  ocr_service.py  stt_service.py
backend/milo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md  PRODUCT.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx
infra/: README.md  main.tf
