[project]
name = "milo-backend"
version = "0.1.0"
description = "Milo backend - FastAPI services"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "Warren LATA", email = "latawarren@gmail.com" } ]

dependencies = [
  "fastapi>=0.98.0",
  "uvicorn[standard]>=0.22.0",
  "pydantic>=2.5.1",
  "python-multipart>=0.0.5",
  "requests>=2.32.0",
  "google-adk>=1.28.1",
  "vertexai>=1.43.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
